--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
 		}
 
 	</script>
-	<script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyBeqrxoHpm6YTAdTwwenzWHpNlc3Emi9gk&callback=initMap"></script>
+	<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyBeqrxoHpm6YTAdTwwenzWHpNlc3Emi9gk&callback=initMap"></script>
 	<script src='bower_components/jquery/dist/jquery.min.js'></script>
 	<script src='bower_components/jquery.elastic-grid/jquery.elastic-grid.min.js'></script>
 
