--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 				<div class="col-md-3">
 					<header class="header">
 						<figure class="header-img">
-							<img src="img/sergeyzubkov.png" alt="Sergey Zubkov">
+							<img src="img/sergeyzubkov.jpg" alt="Sergey Zubkov">
 							<figcaption>
 								Sergey Zubkov
 							</figcaption>
