--- a/portfolio.html
+++ b/portfolio.html
@@ -140,8 +140,8 @@
 								<div class="col-md-8">
 									<div class="portfolio-des">
 										<h2>Разработка Memorisation</h2>
-										<p>
-											<!-- 											Веб-приложение которое является инструментом метода интервального повторения. Пользователь создает карточки с лицевой стороны которых пишется вопрос, термин, иностранное слово, а с обратной стороны  пишется ответ, определение, перевод слова. Затем в режиме обучения ему показываются карточки с лицевой стороны и он должен выбрать одну из опций: знаю, не знаю. В зависимости от ответа определяется следующий интервал через который нужно будет повторить карточку снова.	 -->		
+										<p>Инструмент для облегчения запоминания слов, терминов и любой другой информации с помощью интервального повторения.</p>
+										<p>	
 											При создании использовался фреймворк AngularJS, технология local storage и библиотека underscoreJS.						</p>
 										</div>
 									</div>
