--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Sergey Zubkov | Frontend-developer </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/media-queries.css">
-
+	
 </head>
 <body>
 	<div class="main-wrapper">
