--- a/memorisation/tpls/stack.html
+++ b/memorisation/tpls/stack.html
@@ -2,7 +2,7 @@
 		<ul class="stack" ng-controller="RepeatCardsCtrl">
 			<li ng-repeat='card in repeatCards' 
 				ng-class="{active: isActive(card), learned: $index < active}"
-				ng-controller='CardCtrl'>
+				ng-controller='CardCtrl' class='stack__item'>
 				<div ng-include="'tpls/card.html'">
 				</div>
 			</li>
