add scroll-top btn

--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,9 @@
 					</section>				
 					<!--====  End of send me  ====-->
 					
-
+					<div class="btn-top-container">
+						<button class="btn btn-top">Наверх</button>
+					</div>
 				</div>			
 				<!--====  End of content  ====-->
 				
@@ -141,6 +143,6 @@
 	<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyBeqrxoHpm6YTAdTwwenzWHpNlc3Emi9gk&callback=initMap"></script>
 	<script src='bower_components/jquery/dist/jquery.min.js'></script>
 	<script src='bower_components/jquery.elastic-grid/jquery.elastic-grid.min.js'></script>
-
+	<script type="js/scripts.js"></script>
 </body>
 </html>
