--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 	
 </head>
 <body>
-	<div class="main-wrapper">
+	<!--==================================
+	=            main-wrapper            =
+	===================================-->
+	<div class="main-wrapper">	
 		<div class="container">
 			<div class="row">
 				<!--============================
@@ -253,11 +256,13 @@
 
 					</section>
 					<!--====  End of experience  ====-->
-
+					<div class="btn-top-container">
+						<button class="btn btn-top">Наверх</button>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</div><!--====  End of main-wrapper  ====-->
 	
 	<script src='bower_components/jquery/dist/jquery.min.js'></script>
 	<script src='bower_components/waypoints/jquery.waypoints.js'></script>
