--- a/portfolio.html
+++ b/portfolio.html
@@ -154,7 +154,9 @@
 
 					<!--====  End of portfolio  ====-->
 
-
+					<div class="btn-top-container">
+						<button class="btn btn-top">Наверх</button>
+					</div>
 				</div>			
 				<!--====  End of content  ====-->
 
@@ -164,7 +166,8 @@
 
 
 	<script src='bower_components/jquery/dist/jquery.min.js'></script>
-
+	<script type="js/scripts.js"></script>
+	
 
 
 </body>
