--- a/portfolio.html
+++ b/portfolio.html
@@ -166,7 +166,7 @@
 
 
 	<script src='bower_components/jquery/dist/jquery.min.js'></script>
-	<script type="js/scripts.js"></script>
+	<script src="js/scripts.js"></script>
 	
 
 
