add scroll-top btn

--- a/contact.html
+++ b/contact.html
@@ -143,6 +143,7 @@
 	<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyBeqrxoHpm6YTAdTwwenzWHpNlc3Emi9gk&callback=initMap"></script>
 	<script src='bower_components/jquery/dist/jquery.min.js'></script>
 	<script src='bower_components/jquery.elastic-grid/jquery.elastic-grid.min.js'></script>
+	<script src='bower_components/waypoints/jquery.waypoints.js'></script>
 	<script src="js/scripts.js"></script>
 </body>
 </html>
