--- a/portfolio.html
+++ b/portfolio.html
@@ -166,6 +166,7 @@
 
 
 	<script src='bower_components/jquery/dist/jquery.min.js'></script>
+		<script src='bower_components/waypoints/jquery.waypoints.js'></script>
 	<script src="js/scripts.js"></script>
 	
 
