add mobile menu

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 							</figcaption>
 						</figure>
 						<nav>
+							<div class="header-nav_mobile">
+								<i class="fa fa-bars" aria-hidden="true"></i>
+								Меню
+							</div>
 							<ul class="header-nav">
 								<li class='active'><a href="/index.html"><i class="fa fa-user"></i>Обо мне</a></li>
 								<li><a href="/portfolio.html"><i class="fa fa-folder-o"></i>Мои работы</a></li>
