--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,10 @@
 							</figcaption>
 						</figure>
 						<nav>
+							<div class="header-nav_mobile">
+								<i class="fa fa-bars" aria-hidden="true"></i>
+								Меню
+							</div>
 							<ul class="header-nav">
 								<li><a href="/index.html"><i class="fa fa-user"></i>Обо мне</a></li>
 								<li class='active'><a href=""><i class="fa fa-folder-o"></i>Мои работы</a></li>
