--- a/marko/index.html
+++ b/marko/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name='viewport' content="width=device-width, initial-scale=1">
+	<meta name='viewport' content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Document</title>
+	<title>Marco</title>
 	<!-- styles -->	
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/media-queries.css">
@@ -33,8 +34,8 @@
 		
 		<div class="container">
 			<div class="nav-top clearfix">
-				<div class="logo-top">
-					<button type="button" class="nav-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+				<div class="navbar-header">
+					<button type="button" class="nav-toggle collapsed" data-toggle="collapse" data-target="#nav-horizont-top" aria-expanded="false">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -44,7 +45,7 @@
 						<img src="img/logo.png" alt="marko" class="logo" title="home">
 					</a>
 				</div>
-				<nav class="nav-horizont nav-collapse nav-right">
+				<nav id="nav-horizont-top" class="nav-horizont nav-collapse collapse nav-right">
 					<ul class="nav-list">
 						<li><a class="scroll-link" href="#features">features</a></li>
 						<li><a class="scroll-link" href="#how-it-works">how it work</a></li>
@@ -410,7 +411,7 @@
 				<div class="col-sm-12 call-to-action section-description wow fadeIn">
 					<h2>Call to action</h2>
 					<div class="divider-1 wow fadeInUp"><span></span></div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa voluptatem, quos dolorem voluptate aliquid ducimus. Nemo debitis labore architecto atque! Tenetur, optio, accusamus reprehenderit molestiae officia voluptates placeat inventore quisquam ipsum laboriosam.</p>
+					<p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Ut wisi enim ad minim veniam, quis nostrud.</p>
 				</div>
 			</div>
 			<div class="row">
