--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 											</li>
 											<li>
 												<div class="property">Скайп</div>
-												<div class="value">--</div>
+												<div class="value">saharock@list.ru</div>
 											</li>
 											<li>
 												<div class="property">Github</div>
