add email handler

--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
 							<h4>Напишите мне</h4>
 						</div>
 						<div class="send-me-form-con">
-							<form id='form' class="sedn-me-form">
+							<form action="http://formspree.io/SVZubkovRu@gmail.com" class="sedn-me-form">
 								<div class="row">
 									<div class="col-md-6">
 										<input type="text" name='name' class="form-control" placeholder="Имя" required='required'>
