--- a/memorisation/index.html
+++ b/memorisation/index.html
@@ -8,10 +8,15 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 <body>
-  <section ng-view></section>
+
+  <div class="wrapper">
+  	<section ng-view class='view'></section>
+  </div>
+
 	<script src="libs/angular/angular.min.js"></script>
 	<script src="libs/angular-local-storage/dist/angular-local-storage.min.js"></script>
 	<script src="libs/angular-route/angular-route.min.js"></script>
+	<script src="libs/angular-animate/angular-animate.min.js"></script>
 	<script src="libs/underscore/underscore-min.js"></script>
 
 
