--- a/memorisation/tpls/create-or-edit-card.html
+++ b/memorisation/tpls/create-or-edit-card.html
@@ -3,6 +3,6 @@
 		<input type="text" ng-model='title' placeholder='заполните это поле' required>
 		<textarea name="description" id="" cols="30" rows="10" ng-model='description' placeholder='заполните это поле' required></textarea>
 		<button ng-show='createCardForm.$valid' class="btn btn-primary" ng-click='submit(title, description)'>Ок</button>
-		<button ng-show='createCardForm.$invalid' class="btn btn-default" ng-click='submit(title, description)'>Назад</button>
+		<button ng-show='createCardForm.$invalid' class="btn btn-default" ng-click='backToDeck()'>Назад</button>
 	</form>
 
