fix: stylus, add: react-knowledge

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 										</div>
 									</li>
 									<li>
-										<h4>Stylus</h4>
+										<h4>Препроцессоры</h4>
 										<div class="progress">
 											<div class='percentage' data-percentage='60'></div>
 										</div>
@@ -182,15 +182,21 @@
 							<div class="col-md-11">
 								<ul class="skill-list clearfix">
 									<li>
+										<h4>React</h4>
+										<div class="progress">
+											<div class='percentage' data-percentage='69'></div>
+										</div>
+									</li>
+									<li>
 										<h4>Angular</h4>
 										<div class="progress">
-											<div class='percentage' data-percentage='41'></div>
+											<div class='percentage' data-percentage='53'></div>
 										</div>
 									</li>
 									<li>
 										<h4>jQuery</h4>
 										<div class="progress">
-											<div class='percentage' data-percentage='42'></div>
+											<div class='percentage' data-percentage='59'></div>
 										</div>
 									</li>
 								</ul>
@@ -216,7 +222,7 @@
 							</div>
 							<div class="timeline-point">
 								<h5>Изучение и работа с HTML/CSS</h5>
-								<h6><i class="fa fa-calendar"></i> Март 2016 - Май 2016</h6>
+								<h6><i class="fa fa-calendar"></i> Февраля 2016 - Август 2016</h6>
 								<ul>
 									<li>-Базовое понимание работы интернета</li>
 									<li>-Знакомство с основными понятиями в веб-разработки</li>
@@ -230,23 +236,24 @@
 							</div>
 							<div class="timeline-point">
 								<h5>Изучение и работа с JavaScript/jQuery/Angular</h5>
-								<h6><i class="fa fa-calendar"></i> Мая 2016 - Сентябрь 2016</h6>
+								<h6><i class="fa fa-calendar"></i> Август 2016 - Март 2017</h6>
 									<ul>
 										<li>-Основы JS: переменные, типы данных, функции и т.д</li>
 										<li>-Работа с DOM API</li>
 										<li>-Написание простого скрипта "крестики-нолики"</li>
+										<li>-Основы Node.js, знакомство mongoDB
 										<li>-Основы jQuery. Подключение плагинов.</li>
 										<li>-Основы AngularJS: MVW, шаблоны, директивы, модули, контроллеры и т.д </li>
 										<li>-Создание сайта Memorisation</li>
 									</ul>
 							</div>
 							<div class="timeline-point">
-								<h5>Работа над собственным сайтом Advance</h5>
-								<h6><i class="fa fa-calendar"></i> Сентябрь 2016 - Текущий день</h6>
+								<h5>Освоение React</h5>
+								<h6><i class="fa fa-calendar"></i> Март 2017 - Текущий день</h6>
 								<ul>
-									<li>-Изучение PHP/Laravel/MySQL</li>
-									<li>-Дальнейшие изучение Angular, использование лучших практик</li>
-									<li>-Закрепление ранее изученного</li>
+									<li>-Изучение основ: чтение официальной документации, прохождение туториалов, просмотр видео</li>
+									<li>-Практика. Написания своих компонетов, изучение фрэймворка React-Boostrap</li>
+									<li>-Закрепление ранее изученного и расширение знаний: создание тайм-трекера</li>
 								</ul>
 							</div>
 						</div>
