add: portfolio-item(data_for_business) fix: portfolio-item(thumbs)

--- a/contact.html
+++ b/contact.html
@@ -68,12 +68,12 @@
 							<div class="contact-item-con clearfix">
 								<div class="col-md-4 contact-item">
 									<p>Эл. почта:</p>
-									<p><a href="mailto:SVZubkovRU@gmail.com"> SVZubkovRU@gmail.com</a></p>
+									<p><a href="mailto:SVZubkovRU@gmail.com"> svzubkovru@gmail.com</a></p>
 									<i class="fa fa-envelope-o"></i>
 								</div>
 								<div class="col-md-4 contact-item">
 									<p>Моб. тел.:</p>
-									<p><a href="tel:89250034260">8 925 003 42-60</a></p>
+									<p><a href="tel:89250034260">8 925 003 4260</a></p>
 									<i class="fa fa-phone"></i>
 								</div>
 								<div class="col-md-4 contact-item">
