fix: portfilio-item(data_for_business) link

--- a/data_for_business/index.html
+++ b/data_for_business/index.html
@@ -12,8 +12,7 @@
 		<title>Данные для бизнеса. Онлайн курс об аналитике</title>
 		<meta name="description" content="">
 		<meta name="keywords" content="">
-		<link href="/assets/styles/app.min.css" rel="stylesheet">
-		<link href="/assets/bootstrap/bootstrap.css" rel="stylesheet">
+		<link href="assets/styles/app.min.css" rel="stylesheet">
 	</head>
 
 	<body class="page">
@@ -47,7 +46,7 @@
 							но будет полезен маркетологам, менеджерам и всем, кто принимает решения в бизнесе.</div>
 					</div>
 					<div class="col-md-5">
-						<img class="why__image" src="/assets/why-image.png" alt="" width="100%" role="presentation" />
+						<img class="why__image" src="assets/why-image.png" alt="" width="100%" role="presentation" />
 					</div>
 				</div>
 			</div>
@@ -60,7 +59,7 @@
 							данные или грамотно поставить задачу аналитику или маркетологу.</div>
 					</div>
 					<div class="col-md-5">
-						<img class="course__image" src="/assets/course-image.png" alt="" width="100%" role="presentation" />
+						<img class="course__image" src="assets/course-image.png" alt="" width="100%" role="presentation" />
 					</div>
 				</div>
 				<div class="course-list">
@@ -103,7 +102,7 @@
 					<div class="row sm-column-reverse">
 						<div class="col-md-7">
 							<div class="you-get__figure">
-								<img class="you-get__img" src="/assets/you-get-1.png" alt="" role="presentation" />
+								<img class="you-get__img" src="assets/you-get-1.png" alt="" role="presentation" />
 								<div class="you-get__img-caption">
 									<div class="you-get__img-caption-title">Чёткие инструкции</div>
 									<div class="you-get__img-caption-subtitle">как в уроке про
@@ -118,7 +117,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="you-get__item you-get__item_left">
+				<div class="you-get__item">
 					<h2>Уметь достать данные из базы (а не просить программиста)</h2>
 					<div class="row">
 						<div class="col-md-5">
@@ -126,8 +125,8 @@
 						</div>
 						<div class="col-md-7">
 							<div class="you-get__figure">
-								<img class="you-get__img" src="/assets/you-get-2.png" alt="" role="presentation" />
-								<div class="you-get__img-caption">
+								<img class="you-get__img" src="assets/you-get-2.png" alt="" role="presentation" />
+								<div class="you-get__img-caption you-get__img-caption_left">
 									<div class="you-get__img-caption-title">Простой язык</div>
 									<div class="you-get__img-caption-subtitle"> как в уроке про
 										<strong>SQL-запросы</strong>
@@ -142,7 +141,7 @@
 					<div class="row sm-column-reverse">
 						<div class="col-md-7">
 							<div class="you-get__figure">
-								<img class="you-get__img" src="/assets/you-get-3.png" alt="" role="presentation" />
+								<img class="you-get__img" src="assets/you-get-3.png" alt="" role="presentation" />
 								<div class="you-get__img-caption">
 									<div class="you-get__img-caption-title">Примеры из практики</div>
 									<div class="you-get__img-caption-subtitle">как в уроке про
@@ -171,11 +170,11 @@
 				</div>
 				<div class="row">
 					<div class="col-md-9">
-						<img class="homeworks__img-main" src="/assets/homeworks-main.png" alt="" role="presentation" />
+						<img class="homeworks__img-main" src="assets/homeworks-main.png" alt="" role="presentation" />
 					</div>
 					<div class="col-md-3">
-						<img class="homeworks__img-coment" src="/assets/homeworks-coment-1.png" alt="" role="presentation" />
-						<img class="homeworks__img-coment" src="/assets/homeworks-coment-2.png" alt="" role="presentation" />
+						<img class="homeworks__img-coment" src="assets/homeworks-coment-1.png" alt="" role="presentation" />
+						<img class="homeworks__img-coment" src="assets/homeworks-coment-2.png" alt="" role="presentation" />
 						<div class="homeworks__number-accent">
 							<div class="homeworks__number-accent-title">6</div>
 							<div class="homeworks__number-accent-subtitle">практических заданий: SQL, когорты, прогноз LTV и анализ А/Б тестов </div>
@@ -194,12 +193,12 @@
 							получилось, зато теперь могу общаться на одном языке с айтишниками и представлять что можно делать с данными в базе.</div>
 						<div
 						 class="text">
-							<strong>Инсайт. </strong>У нас сервис онлайн-обучения и мы долго не могли придумать адекватную метрику для оценки вовлечённости.
+							<strong>Инсайт.</strong>У нас сервис онлайн-обучения и мы долго не могли придумать адекватную метрику для оценки вовлечённости.
 							Теперь понимаю что с помощью когортного анализа можно оценивать качество контента, а также наших способов возврата
-							аудитории (ретаргетинг и рассылка). </div>
+							аудитории (ретаргетинг и рассылка).</div>
 				</div>
 				<div class="col-md-4">
-					<img class="testimonials__item-img" src="/assets/testimonials-1.png" alt="" role="presentation" />
+					<img class="testimonials__item-img" src="assets/testimonials-1.png" alt="" role="presentation" />
 					<div class="testimonials__item-img-title">Иван Дианов</div>
 					<div class="testimonials__item-img-subtitle">Соучредитель кафе «Йа»</div>
 					<div class="testimonials__item-img-contact">Для связи:
@@ -209,7 +208,7 @@
 			</div>
 			<div class="testimonials__item row">
 				<div class="col-md-4">
-					<img class="testimonials__item-img" src="/assets/testimonials-2.png" alt="" role="presentation" />
+					<img class="testimonials__item-img" src="assets/testimonials-2.png" alt="" role="presentation" />
 					<div class="testimonials__item-img-title">Виталий Александров</div>
 					<div class="testimonials__item-img-subtitle">директор по продажам ТД «Объединённые кирпичные заводы»</div>
 					<div class="testimonials__item-img-contact">Для связи:
@@ -218,9 +217,9 @@
 				</div>
 				<div class="col-md-8">
 					<div class="testimonials__item-title">Практика — огонь! Прочитал — посчитал</div>
-					<div class="text">Все, кому по работе надо работать с данными. Они внедряют полученные знания. </div>
+					<div class="text">Все, кому по работе надо работать с данными. Они внедряют полученные знания.</div>
 					<div class="text">
-						<strong>Зачем пошёл на курс. </strong>Курс проходят предприниматели, маркетологи.</div>
+						<strong>Зачем пошёл на курс.</strong>Курс проходят предприниматели, маркетологи.</div>
 					<div class="text">
 						<strong>Что внедрил.</strong>Они внедряют полученные знания, чтобы увеличить прибыль.</div>
 				</div>
@@ -231,12 +230,12 @@
 					<div class="text">Каждый курс проходят предприниматели, маркетологи и продакт-менеджеры — все, кому по работе надо работать с данными.
 						Они внедряют полученные знания, чтобы увеличить прибыль.</div>
 					<div class="text">
-						<strong>Зачем пошёл на курс. </strong>Курс проходят предприниматели, маркетологи.</div>
+						<strong>Зачем пошёл на курс.</strong>Курс проходят предприниматели, маркетологи.</div>
 					<div class="text">
-						<strong>Чего ожидал. </strong>Они внедряют полученные знания, чтобы увеличить прибыль.</div>
+						<strong>Чего ожидал.</strong>Они внедряют полученные знания, чтобы увеличить прибыль.</div>
 				</div>
 				<div class="col-md-4">
-					<img class="testimonials__item-img" src="/assets/testimonials-3.png" alt="" role="presentation" />
+					<img class="testimonials__item-img" src="assets/testimonials-3.png" alt="" role="presentation" />
 					<div class="testimonials__item-img-title">Артур Белостоцкий</div>
 					<div class="testimonials__item-img-subtitle">основатель сети кофеен «Лайкели»</div>
 					<div class="testimonials__item-img-contact">Для связи:
@@ -293,13 +292,13 @@
 							частных лиц. Минимальный заказ для компаний — 15 тысяч рублей. Скидки при заказе от 100 тысяч рублей.</div>
 					</div>
 					<div class="col-md-4">
-						<img class="faq__img" src="/assets/faq.png" alt="" role="presentation" />
+						<img class="faq__img" src="assets/faq.png" alt="" role="presentation" />
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="yellow-bg">
-			<div class="subscribe">
+			<div class="subscribe container">
 				<div class="row">
 					<div class="col-md-4">
 						<h2>Подписка</h2>
@@ -327,27 +326,28 @@
 						</div>
 					</div>
 					<div class="col-md-6 col-md-offset-2">
-						<img class="subscribe__img" src="/assets/subscribe.png" alt="" role="presentation" />
+						<img class="subscribe__img" src="assets/subscribe.png" alt="" role="presentation" />
 					</div>
 				</div>
 			</div>
-			<div class="container"></div>
-			<div class="footer">
+			<div class="container">
+				<div class="footer">
+					<div class="row">
+						<div class="col-md-6">Досудебный порядок урегулирования споров обязателен. Все споры — по эл. почте, переписка юридически значима. Подсудность
+							неурегулированных споров — Арбитражный суд города Москвы. Права по договору уступке не подлежат. Акты не подписываем.</div>
+						<div
+						 class="col-md-6">ИП Куличевский Алексей Алексеевич, ОГРНИП 313231231700065 Применяет упрощенную систему налогообложения Эл. почта для
+							связи: ak@smysl.io</div>
+				</div>
 				<div class="row">
-					<div class="col-md-6">Досудебный порядок урегулирования споров обязателен. Все споры — по эл. почте, переписка юридически значима. Подсудность
-						неурегулированных споров — Арбитражный суд города Москвы. Права по договору уступке не подлежат. Акты не подписываем.</div>
-					<div
-					 class="col-md-6">ИП Куличевский Алексей Алексеевич, ОГРНИП 313231231700065 Применяет упрощенную систему налогообложения Эл. почта для
-						связи: ak@smysl.io</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6">
-					<div class="footer__copyright">&copy; Алексей Куличевский, 2017</div>
+					<div class="col-md-6">
+						<div class="footer__copyright">&copy; Алексей Куличевский, 2017</div>
+					</div>
 				</div>
 			</div>
 		</div>
 		</div>
-		<script src="/assets/scripts/app.min.js"></script>
+		<script src="assets/scripts/app.min.js"></script>
 	</body>
 
 </html>
