--- a/portfolio.html
+++ b/portfolio.html
@@ -92,6 +92,26 @@
 								</div>
 							</div>
 						</div>
+						<div class='portfolio-item'>
+							<div class="row">
+								<div class="col-md-4">
+									<a href="/data_for_business/index.html">
+										<figure class="portfolio-item-img">
+											<img src="img/data_for_business_preview.png" alt="">
+											<figcaption>Верстка</figcaption>
+										</figure>
+									</a>
+								</div>
+								<div class="col-md-8">
+									<div class="portfolio-des">
+										<h2>Верстка </h2>
+										<p>
+											Применение css-фреймворка Bootstrap. Работа над адаптивностью сайта.
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
 						<div class="portfolio-item">
 						<div class="portfolio-item">
 							<div class="row">
@@ -147,26 +167,6 @@
 										<h2>Верстка шаблона Golden one</h2>
 										<p>
 											Использование на практике знаний HTML/CSS. Работа с Photoshop'ом.
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class='portfolio-item'>
-							<div class="row">
-								<div class="col-md-4">
-									<a href="landitt.html">
-										<figure class="portfolio-item-img">
-											<img src="img/data_for_business_preview.png" alt="">
-											<figcaption>Верстка</figcaption>
-										</figure>
-									</a>
-								</div>
-								<div class="col-md-8">
-									<div class="portfolio-des">
-										<h2>Верстка </h2>
-										<p>
-											Применение css-фреймворка Bootstrap. Работа над адаптивностью сайта.
 										</p>
 									</div>
 								</div>
