--- a/portfolio.html
+++ b/portfolio.html
@@ -55,6 +55,38 @@
 						<div class='portfolio-item'>
 							<div class="row">
 								<div class="col-md-4">
+									<a href="http://rocky-plateau-11954.herokuapp.com/">
+										<figure class="portfolio-item-img">
+											<img src="img/task-manager.png" alt="">
+											<figcaption>Программирование</figcaption>
+										</figure>
+									</a>
+								</div>
+								<div class="col-md-8">
+									<div class="portfolio-des">
+										<h2>Task-manager</h2>
+										<p>
+											Веб-приложение для организации задач написанное на Node.js(Express.js) и React.
+											Развернуто на сервисе Heroku. В качестве базы данных выступает MongoDB, для лучшего
+											взаимодействия с этой БД используется Mongoose.
+										</p>
+										<ul>
+											<li>- Система аунтентификации пользователей(JWT)</li>
+											<li>- Создание, редактирование, перемещение, удаления, фильтрация задач</li>
+											<li>- Задаче можно  присвоить исполнителя, ответственного, клиента</li>
+											<li>- Каждому пользователю связанному с задачей приходят уведомления о всех действиях
+											производимых над задачей.</li>
+											<li>- Пользователи могут комментировать задачи</li>
+										</ul>
+
+											<p><b> Чтобы войти используйте email - saharock@list.ru, password - 1234 </b></p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class='portfolio-item'>
+							<div class="row">
+								<div class="col-md-4">
 									<a href="landitt.html">
 										<figure class="portfolio-item-img">
 											<img src="img/landitt_preview.png" alt="">
@@ -127,7 +159,7 @@
 									<div class="portfolio-des">
 										<h2>Разработка Memorisation</h2>
 										<p>Инструмент для облегчения запоминания слов, терминов и любой другой информации с помощью интервального повторения.</p>
-										<p>	
+										<p>
 											При создании использовался фреймворк AngularJS, технология local storage и библиотека underscoreJS.						</p>
 										</div>
 									</div>
@@ -181,7 +213,7 @@
 					<div class="btn-top-container">
 						<button class="btn btn-top">Наверх</button>
 					</div>
-				</div>			
+				</div>
 				<!--====  End of content  ====-->
 
 			</div>
@@ -192,7 +224,7 @@
 	<script src='bower_components/jquery/dist/jquery.min.js'></script>
 		<script src='bower_components/waypoints/jquery.waypoints.js'></script>
 	<script src="js/scripts.js"></script>
-	
+
 
 
 </body>
