--- a/steel_press/index.html
+++ b/steel_press/index.html
@@ -20,7 +20,7 @@
 		<title>CSSSR Project Template</title>
 		<meta name="description" content="">
 		<meta name="keywords" content="">
-		<link href="/assets/styles/app.min.css?v=7b25811" rel="stylesheet">
+		<link href="assets/styles/app.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
 	</head>
 
@@ -33,7 +33,7 @@
 				<div class="container">
 					<div class="header__logo-container col-md-4">
 						<a class="logo" href="#">
-							<img class="logo__image" src="/assets/images/logo.png" alt="" role="presentation" />
+							<img class="logo__image" src="assets/images/logo.png" alt="" role="presentation" />
 						</a>
 					</div>
 					<div class="col-md-8">
@@ -134,7 +134,7 @@
 			<div class="slider__container">
 				<ul class="slider rslides">
 					<li class="slider__item">
-						<img class="slider__img" src="/assets/images/slider/slide-1.jpg" alt="" role="presentation" />
+						<img class="slider__img" src="assets/images/slider/slide-1.jpg" alt="" role="presentation" />
 						<div class="slider__caption">
 							<div class="slider__caption-title">Provide
 								<span>indsutrail</span>
@@ -145,7 +145,7 @@
 						</div>
 					</li>
 					<li class="slider__item">
-						<img class="slider__img" src="/assets/images/slider/slide-2.jpg" alt="" role="presentation" />
+						<img class="slider__img" src="assets/images/slider/slide-2.jpg" alt="" role="presentation" />
 						<div class="slider__caption">
 							<div class="slider__caption-title">Test
 								<span></span>
@@ -172,7 +172,7 @@
 					<ul class="service-list row">
 						<div class="col-md-4 col-sm-6">
 							<li class="service-list__item">
-								<img class="service-list__item-img" src="/assets/images/service/service-1.jpg" alt="" role="presentation" />
+								<img class="service-list__item-img" src="assets/images/service/service-1.jpg" alt="" role="presentation" />
 								<a class="service-list__item-caption link" href="#">
 									<span class="service-list__item-caption-title">Matireal industry</span>
 									<span class="service-list__item-caption-arrow fa fa-angle-right"></span>
@@ -181,7 +181,7 @@
 						</div>
 						<div class="col-md-4 col-sm-6">
 							<li class="service-list__item">
-								<img class="service-list__item-img" src="/assets/images/service/service-2.jpg" alt="" role="presentation" />
+								<img class="service-list__item-img" src="assets/images/service/service-2.jpg" alt="" role="presentation" />
 								<a class="service-list__item-caption link" href="#">
 									<span class="service-list__item-caption-title">chemical science</span>
 									<span class="service-list__item-caption-arrow fa fa-angle-right"></span>
@@ -190,7 +190,7 @@
 						</div>
 						<div class="col-md-4 col-sm-6">
 							<li class="service-list__item">
-								<img class="service-list__item-img" src="/assets/images/service/service-3.jpg" alt="" role="presentation" />
+								<img class="service-list__item-img" src="assets/images/service/service-3.jpg" alt="" role="presentation" />
 								<a class="service-list__item-caption link" href="#">
 									<span class="service-list__item-caption-title">farm&amp;agriculture</span>
 									<span class="service-list__item-caption-arrow fa fa-angle-right"></span>
@@ -199,7 +199,7 @@
 						</div>
 						<div class="col-md-4 col-sm-6">
 							<li class="service-list__item">
-								<img class="service-list__item-img" src="/assets/images/service/service-4.jpg" alt="" role="presentation" />
+								<img class="service-list__item-img" src="assets/images/service/service-4.jpg" alt="" role="presentation" />
 								<a class="service-list__item-caption link" href="#">
 									<span class="service-list__item-caption-title">telecommunication</span>
 									<span class="service-list__item-caption-arrow fa fa-angle-right"></span>
@@ -208,7 +208,7 @@
 						</div>
 						<div class="col-md-4 col-sm-6">
 							<li class="service-list__item">
-								<img class="service-list__item-img" src="/assets/images/service/service-5.jpg" alt="" role="presentation" />
+								<img class="service-list__item-img" src="assets/images/service/service-5.jpg" alt="" role="presentation" />
 								<a class="service-list__item-caption link" href="#">
 									<span class="service-list__item-caption-title">Oil&amp;petrolium</span>
 									<span class="service-list__item-caption-arrow fa fa-angle-right"></span>
@@ -217,7 +217,7 @@
 						</div>
 						<div class="col-md-4 col-sm-6">
 							<li class="service-list__item">
-								<img class="service-list__item-img" src="/assets/images/service/service-6.jpg" alt="" role="presentation" />
+								<img class="service-list__item-img" src="assets/images/service/service-6.jpg" alt="" role="presentation" />
 								<a class="service-list__item-caption link" href="#">
 									<span class="service-list__item-caption-title">civil engeneering</span>
 									<span class="service-list__item-caption-arrow fa fa-angle-right"></span>
@@ -750,7 +750,7 @@
 					<div class="row">
 						<div class="col-md-4">
 							<a class="logo" href="#">
-								<img class="logo__image" src="/assets/images/logo.png" alt="" role="presentation" />
+								<img class="logo__image" src="assets/images/logo.png" alt="" role="presentation" />
 							</a>
 							<div class="p p_color-white">Lorem ipsum dolor amet natum latine copiosa at quo, suas labore saperet has there any quote for write lorem sit latineu
 								suas dummy sample</div>
@@ -835,7 +835,7 @@
 		</div>
 		<!--====  End of Footer ====//-->
 		<div class="scroll-top-button fa fa-long-arrow-up"></div>
-		<script src="/assets/scripts/app.min.js?v=ba9f2a2"></script>
+		<script src="assets/scripts/app.min.js"></script>
 	</body>
 
 </html>
