--- a/portfolio.html
+++ b/portfolio.html
@@ -55,6 +55,26 @@
 						<div class='portfolio-item'>
 							<div class="row">
 								<div class="col-md-4">
+									<a href="/time_tracker/index.html">
+										<figure class="portfolio-item-img">
+											<img src="img/time-tracker_preview.png" alt="">
+											<figcaption>Программирование</figcaption>
+										</figure>
+									</a>
+								</div>
+								<div class="col-md-8">
+									<div class="portfolio-des">
+										<h2>Time tracker</h2>
+										<p>
+											Небольшое приложение для отслеживания времени затраченного на проект. React + Redux
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class='portfolio-item'>
+							<div class="row">
+								<div class="col-md-4">
 									<a href="/steel_press/index.html">
 										<figure class="portfolio-item-img">
 											<img src="img/steel-press_preview.png" alt="">
@@ -166,7 +186,6 @@
 							</div>
 						</div>
 						<div class="portfolio-item">
-						<div class="portfolio-item">
 							<div class="row">
 								<div class="col-md-4">
 									<a href="/memorisation/index.html">
@@ -186,6 +205,7 @@
 									</div>
 								</div>
 							</div>
+						<div class="portfolio-item">
 							<div class="row">
 								<div class="col-md-4">
 									<a href="/velo/index.html">
