edit: опыт работы, портфолио fix: btn-top

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,8 @@
 									<div class="portfolio-des">
 										<h2>Time tracker</h2>
 										<p>
-											Небольшое приложение для отслеживания времени затраченного на проект. React + Redux
+											Небольшое приложение для отслеживания своего денежного ожидания от работы над проектом. Пользователь создает проект, указывает свою почасовую ставку и запускает трекер во время работы. Программа отслеживает время работы и умножает его на почасовую ставку, выводя итоговую сумму. 
+											Для написания этого приложения использовалась связка React + Redux
 										</p>
 									</div>
 								</div>
@@ -96,7 +97,7 @@
 						<div class='portfolio-item'>
 							<div class="row">
 								<div class="col-md-4">
-									<a href="http://rocky-plateau-11954.herokuapp.com/">
+									<a href="http://taskmanageruseduk.herokuapp.com/">
 										<figure class="portfolio-item-img">
 											<img src="img/task-manager.png" alt="">
 											<figcaption>Программирование</figcaption>
@@ -107,9 +108,8 @@
 									<div class="portfolio-des">
 										<h2>Task-manager</h2>
 										<p>
-											Веб-приложение для организации задач написанное на Node.js(Express.js) и React.
-											Развернуто на сервисе Heroku. В качестве базы данных выступает MongoDB, для лучшего
-											взаимодействия с этой БД используется Mongoose.
+											Веб-приложение для организации задач. Пользователи могут быть двух типов: администратор (может добавлять и удалять пользователей) и обычный пользователь.
+											Приложение позволяет создавать задачи с разными параметрами (исполнитель, ответственное лицо, клиент, срок выполнения и приоритет) и менять их статус по обстоятельствам. При создании задачи происходит уведомление всех участников по электронной почте. Каждую задачу можно комментировать. Имеется система авторизации. Использованные технологии: node, express, mongodb, mongoose, react, react-router, passport, jsonwebtoken и nodemailer. Приложение развернуто на сервисе Heroku.
 										</p>
 										<ul>
 											<li>- Система аунтентификации пользователей(JWT)</li>
@@ -120,7 +120,27 @@
 											<li>- Пользователи могут комментировать задачи</li>
 										</ul>
 
-											<p><b> Чтобы войти используйте email - saharock@list.ru, password - 1234 </b></p>
+											<p><b> Чтобы войти используйте email - demo@mail.ru, password - demo</b></p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="portfolio-item">
+							<div class="row">
+								<div class="col-md-4">
+									<a href="/memorisation/index.html">
+										<figure class="portfolio-item-img">
+											<img src="img/memorisation_preview.png" alt="">
+											<figcaption >Программирование</figcaption>
+										</figure>
+									</a>
+								</div>
+								<div class="col-md-8">
+									<div class="portfolio-des">
+										<h2>Разработка Memorisation</h2>
+										<p>Инструмент для облегчения запоминания слов, терминов и любой другой информации с помощью интервального повторения.</p>
+										<p>
+											При создании использовался фреймворк AngularJS, технология local storage и библиотека underscoreJS.						</p>
 									</div>
 								</div>
 							</div>
@@ -185,26 +205,6 @@
 								</div>
 							</div>
 						</div>
-						<div class="portfolio-item">
-							<div class="row">
-								<div class="col-md-4">
-									<a href="/memorisation/index.html">
-										<figure class="portfolio-item-img">
-											<img src="img/memorisation_preview.png" alt="">
-											<figcaption >Программирование</figcaption>
-										</figure>
-									</a>
-								</div>
-								<div class="col-md-8">
-									<div class="portfolio-des">
-										<h2>Разработка Memorisation</h2>
-										<p>Инструмент для облегчения запоминания слов, терминов и любой другой информации с помощью интервального повторения.</p>
-										<p>
-											При создании использовался фреймворк AngularJS, технология local storage и библиотека underscoreJS.						</p>
-										</div>
-									</div>
-								</div>
-							</div>
 						<div class="portfolio-item">
 							<div class="row">
 								<div class="col-md-4">
