--- a/index.html
+++ b/index.html
@@ -222,38 +222,37 @@
 							</div>
 							<div class="timeline-point">
 								<h5>Изучение и работа с HTML/CSS</h5>
-								<h6><i class="fa fa-calendar"></i> Февраля 2016 - Август 2016</h6>
+								<h6><i class="fa fa-calendar"></i> Февраля 2018 - Апрель 2018</h6>
 								<ul>
-									<li>-Базовое понимание работы интернета</li>
-									<li>-Знакомство с основными понятиями в веб-разработки</li>
+									<li>-Базовое понимание работы интернета. Протокол HTTP</li>
 									<li>-Основы HTML: структура документа, теги, симантика, валидность и т.д</li>
 									<li>-Основы CSS: синтаксис, способы объявления, селекторы и т.д</li>
 									<li>-Работа с Photoshop при верстке. Верстка простых макетов</li>
-									<li>-Углубленное изучение HTML/CSS</li>
+									<li>-Верстка по методологии БЭМ</li>
 									<li>-Адаптивность сайта. Создание сложных макетов</li>
-									<li>-Изучение современных инструментов используемых при верстке</li>
+									<li>-Изучение современных инструментов используемых при верстке: gulp, webpack, npm</li>
+									<li>-Практическое применение знаний: верстка макетов Landitt, Marko, Steel Press, Golden one</li>
 								</ul>
 							</div>
 							<div class="timeline-point">
-								<h5>Изучение и работа с JavaScript/jQuery/Angular</h5>
-								<h6><i class="fa fa-calendar"></i> Август 2016 - Март 2017</h6>
+								<h5>Изучение и работа с JavaScript/jQuery</h5>
+								<h6><i class="fa fa-calendar"></i> Апрель 2018 - Октябрь 2018</h6>
 									<ul>
 										<li>-Основы JS: переменные, типы данных, функции и т.д</li>
 										<li>-Работа с DOM API</li>
 										<li>-Написание простого скрипта "крестики-нолики"</li>
-										<li>-Основы Node.js, знакомство mongoDB
+										<li>-Основы Node.js, знакомство c mongoDB
 										<li>-Основы jQuery. Подключение плагинов.</li>
-										<li>-Основы AngularJS: MVW, шаблоны, директивы, модули, контроллеры и т.д </li>
-										<li>-Создание сайта Memorisation</li>
 									</ul>
 							</div>
 							<div class="timeline-point">
-								<h5>Освоение React</h5>
-								<h6><i class="fa fa-calendar"></i> Март 2017 - Текущий день</h6>
+								<h5>Изучение JS-библиотеки React</h5>
+								<h6><i class="fa fa-calendar"></i> Октябрь 2018 - Текущий день</h6>
 								<ul>
 									<li>-Изучение основ: чтение официальной документации, прохождение туториалов, просмотр видео</li>
 									<li>-Практика. Написания своих компонетов, изучение фрэймворка React-Boostrap</li>
-									<li>-Закрепление ранее изученного и расширение знаний: создание тайм-трекера</li>
+									<li>-Закрепление ранее изученного и расширение знаний: react-router, redux, server-side rendering</li>
+									<li>-Закрепление изученного на практике: создание приложений time-tracker и task-manager</li>
 								</ul>
 							</div>
 						</div>
